--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -5,7 +5,7 @@
   entities:
     CP14OreCopper: 4
   result: CP14CopperBar1
-  knowledgeRequired: T1_MetallMelting
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14IronBar1
@@ -14,7 +14,7 @@
   entities:
     CP14OreIron: 4
   result: CP14IronBar1
-  knowledgeRequired: T1_MetallMelting
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14GoldBar1
@@ -23,7 +23,7 @@
   entities:
     CP14OreGold: 4
   result: CP14GoldBar1
-  knowledgeRequired: T1_MetallMelting
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14MithrilBar1
@@ -32,7 +32,7 @@
   entities:
     CP14OreMithril: 4
   result: CP14MithrilBar1
-  knowledgeRequired: T1_MetallMelting
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14GlassSheet1
@@ -41,7 +41,7 @@
   entities:
     CP14QuartzShard: 1
   result: CP14GlassSheet1
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14GlassSheetShard1
@@ -50,7 +50,7 @@
   entities:
     CP14GlassShard: 3
   result: CP14GlassSheet1
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialTiny
@@ -59,7 +59,7 @@
   stacks:
     CP14GlassSheet: 1
   result: CP14VialTiny
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialTinyReinforced
@@ -69,7 +69,7 @@
     CP14CopperBar: 1
     CP14GlassSheet: 1
   result: CP14VialTinyReinforced
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialSmall
@@ -78,7 +78,7 @@
   stacks:
     CP14GlassSheet: 2
   result: CP14VialSmall
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialSmallReinforced
@@ -88,5 +88,5 @@
     CP14CopperBar: 1
     CP14GlassSheet: 2
   result: CP14VialSmallReinforced
-  knowledgeRequired: T1_Glasswork
+  knowledgeRequired: Glasswork
   
