--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/blacksmith.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/blacksmith.yml
@@ -6,6 +6,13 @@
   startingGear: CP14BlacksmithGear
   icon: "CP14JobIconBlacksmith"
   supervisors: cp14-job-supervisors-command
+  special:
+  - !type:CP14AddKnowledgeSpecial
+    knowledge:
+    - WoodWork
+    - MetallMelting
+    - MetallForging
+    - Glasswork
 
 - type: startingGear
   id: CP14BlacksmithGear
