--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
@@ -26,16 +26,6 @@
       children:
       - !type:GroupSelector
         children:
-        - id: CP14SilverCoin1
-          weight: 0.1
-        - id: CP14CopperCoin
-          weight: 0.1
-        - id: CP14CopperCoin5
-          weight: 0.5
-        - id: CP14CopperCoin1
-          weight: 1
-      - !type:GroupSelector
-        children:
         - id: CP14SpellScrollIceShards
         - id: CP14SpellScrollShadowGrab
         - id: CP14SpellScrollSphereOfLight
@@ -69,6 +59,10 @@
         - id: CP14VialSmallBlueAmanita
         - id: CP14VialTinyChromiumSlime
         - id: CP14VialTinyLumiMushroom
+      - !type:GroupSelector
+        children:
+        - id: CP14BookKnowledgeClothingSewing
+        - id: CP14BookKnowledgeWallpaperCraft
       - id: CP14SilverCoin5
       - id: CP14BaseLockpick
       - id: CP14EnergyCrystalMediumEmpty
@@ -109,21 +103,15 @@
       - !type:NestedSelector
         tableId: CP14TableDemiplaneLootT1
         weight: 0.25
-      # Coins
-      - !type:GroupSelector
-        children:
-        - id: CP14SilverCoin5
-          weight: 0.1
-        - id: CP14SilverCoin1
-          weight: 0.3
-        - id: CP14CopperCoin5
-          weight: 0.5
       - !type:GroupSelector
         children:
         - id: CP14SpellScrollShadowStep
         - id: CP14SpellScrollFireball
         - id: CP14SpellScrollBeerCreation
           weight: 0.2
+      - !type:GroupSelector
+        children:
+        - id: CP14BookKnowledgeAdvancedClothingSewing
       - id: CP14EnergyCrystalMediumEmpty
     # Rare
     - !type:GroupSelector
