--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -5,6 +5,7 @@
   entities:
     CP14OreCopper: 4
   result: CP14CopperBar1
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14IronBar1
@@ -13,6 +14,7 @@
   entities:
     CP14OreIron: 4
   result: CP14IronBar1
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14GoldBar1
@@ -21,6 +23,7 @@
   entities:
     CP14OreGold: 4
   result: CP14GoldBar1
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14MithrilBar1
@@ -29,6 +32,7 @@
   entities:
     CP14OreMithril: 4
   result: CP14MithrilBar1
+  knowledgeRequired: MetallMelting
 
 - type: CP14Recipe
   id: CP14GlassSheet1
@@ -37,6 +41,7 @@
   entities:
     CP14QuartzShard: 1
   result: CP14GlassSheet1
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14GlassSheetShard1
@@ -45,6 +50,7 @@
   entities:
     CP14GlassShard: 3
   result: CP14GlassSheet1
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialTiny
@@ -53,6 +59,7 @@
   stacks:
     CP14GlassSheet: 1
   result: CP14VialTiny
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialTinyReinforced
@@ -62,6 +69,7 @@
     CP14CopperBar: 1
     CP14GlassSheet: 1
   result: CP14VialTinyReinforced
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialSmall
@@ -70,6 +78,7 @@
   stacks:
     CP14GlassSheet: 2
   result: CP14VialSmall
+  knowledgeRequired: Glasswork
 
 - type: CP14Recipe
   id: CP14VialSmallReinforced
@@ -79,4 +88,5 @@
     CP14CopperBar: 1
     CP14GlassSheet: 2
   result: CP14VialSmallReinforced
+  knowledgeRequired: Glasswork
   
