--- a/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
@@ -7,6 +7,7 @@
   stacks:
     CP14WoodenPlanks: 3
   result: CP14Bucket
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14WoodenBeerMug
@@ -16,6 +17,7 @@
     CP14WoodenPlanks: 2
     CP14Nail: 1
   result: CP14WoodenBeerMug
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14PlateWooden
@@ -24,6 +26,7 @@
   stacks:
     CP14WoodenPlanks: 2
   result: CP14PlateWooden
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14BaseMop
@@ -33,6 +36,7 @@
     CP14WoodenPlanks: 2
     CP14Cloth: 1
   result: CP14BaseMop
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14Torch
@@ -59,6 +63,7 @@
   stacks:
     CP14WoodenPlanks: 1
   result: CP14ModularGripWooden
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14ModularGripWoodenLong
@@ -67,6 +72,7 @@
   stacks:
     CP14WoodenPlanks: 2
   result: CP14ModularGripWoodenLong
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14ModularGripLucens
@@ -75,6 +81,7 @@
   stacks:
     CP14LucensWoodenPlanks: 1
   result: CP14ModularGripLucens
+  knowledgeRequired: WoodWork
 
 - type: CP14Recipe
   id: CP14ModularGripLucensLong
@@ -83,3 +90,4 @@
   stacks:
     CP14LucensWoodenPlanks: 2
   result: CP14ModularGripLucensLong
+  knowledgeRequired: WoodWork
