--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/alchemist.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/alchemist.yml
@@ -7,9 +7,9 @@
   icon: "CP14JobIconAlchemist"
   supervisors: cp14-job-supervisors-command
   special:
-  - !type:CP14AddSkillSpecial
-    skills:
-    - Alchemy
+  - !type:CP14AddKnowledgeSpecial
+    knowledge:
+    - WoodWork
 
 - type: startingGear
   id: CP14AlchemistGear
