--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/water_lilies.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/water_lilies.yml
@@ -72,6 +72,45 @@
     speed: 3.5
     dis: 2
 
+- type: entityLootTable
+  id: CP14GatherAirLily
+  entries:
+  - id: CP14AirLily
+    amount: 1
+    maxAmount: 2
+
+- type: entity
+  id: CP14GatherableWaterAirLily
+  parent: 
+  - CP14GatherableWildBase
+  - CP14WaterLilies
+  name: air lily
+  description: A light, delicate and airy flower. It is said that its special properties even allow it to breathe underwater...
+  suffix: Gatherable
+  components:
+  - type: Sprite
+    sprite: _CP14/Structures/Flora/water_lilies.rsi
+    layers:
+      - state: small_flower1
+        map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        small_flower1: ""
+        small_flower2: ""
+        small_flower3: ""
+        small_flower4: ""
+        big_flower1: ""
+        big_flower2: ""
+        big_flower3: ""
+        big_flower4: ""
+  - type: Gatherable
+    loot:
+      All: CP14GatherAirLily
+
+
+
+
 - type: entity
   id: CP14WaterReeds
   parent: CP14WaterLilies
